# pipetbot_ros2_ws

./: .gitignore  README.md  setup.py
dataset/runs/train/yolov11n_experiment/: args.yaml
src/: d435i_config.yaml
src/arcs_ros2-ros2/: README.md
src/arcs_ros2-ros2/aubo_bringup/launch/: aubo.launch.py  aubo_planning.launch.py
src/arcs_ros2-ros2/aubo_controllers/: CMakeLists.txt  package.xml
src/arcs_ros2-ros2/aubo_description/: CMakeLists.txt  package.xml
src/arcs_ros2-ros2/aubo_description/gazebo/worlds/: empty.world
src/arcs_ros2-ros2/aubo_description/srdf/: aubo_macro.srdf.xacro
src/arcs_ros2-ros2/aubo_description/urdf/: aubo_C5.xacro  aubo_i5.urdf  pipetting.ros2_control.xacro  pipetting_robot.xacro  pipettingrobot.xacro
src/arcs_ros2-ros2/aubo_moveit2/: CMakeLists.txt
src/arm_action/: package.xml  setup.cfg  setup.py
src/arm_action/arm_action/: action_execute.py  get_circle_coords_client.py  get_detections_client.py  get_expected_circle_count_client.py  jointaction_execute.py  pipetting_control.py  planning_scene_initializer.py  quintic_spline.py  rl_trajectory.py  set_gpio_combination_action_client.py  set_target_pose_action_client.py
src/arm_action/config/: pipetting_targets.yaml
src/circle_detection/: package.xml  setup.cfg  setup.py
src/circle_detection/circle_detection/: circleAll_detector.py  circle_detector.py  circle_pub.py  circle_sorted.py  circle_test.py  fig12.py  fig14-1.py  fig14-2.py  kalman_filter.py  preprocessing.py
src/effector_controller/: package.xml  setup.cfg  setup.py
src/effector_controller/effector_controller/: effector_controller.py
src/eyehand_calibration/: package.xml  setup.cfg  setup.py
src/eyehand_calibration/eyehand_calibration/: calibration_client.py  eyeinhand_calibration.py  eyetohand_calibration.py  quaternion_transform.py
src/motion_planning/: CMakeLists.txt  package.xml
src/motion_planning/src/: quintic_spline.cpp
src/obstacle_detection/: package.xml  setup.py
src/obstacle_detection/obstacle_detection/: ObsacleDetect_yolo11.py  ObsaclePointSeg_yolo11_pub.py  ObsacleSeg_MaskRCNN.py  ObsacleSeg_yolo11.py  ray_visualizer.py
src/pipettingrobot_gui/: package.xml  setup.cfg  setup.py
src/pipettingrobot_gui/applications/: pipettingrobot_operator.desktop
src/pipettingrobot_gui/launch/: pipetting_operator.launch.py
src/pipettingrobot_gui/meshes/: Beaker.dae  TestTube.dae  example_beaker.dae  example_test_tube.dae  example_test_tube_rack.dae
src/pipettingrobot_gui/pipettingrobot_gui/: dae_viewer_test.py  gpu_image_view.py  operator_panel.py  qt3d_scene.py  scene_bridge.py
src/pipettingrobot_gui/resource/: pipettingrobot_gui
src/pipettingrobot_gui/rviz/: pipetting_scene.rviz
src/pipettingrobot_gui/scripts/: install_desktop_shortcut.sh  launch_pipetting_operator.sh
src/pipettingrobot_interfaces/: CMakeLists.txt  package.xml
src/pipettingrobot_interfaces/action/: GetCircleCoords.action  GetExpectedCirclePosition.action  SetGPIOCombination.action  SetTargetPose.action
src/pipettingrobot_interfaces/msg/: Circle.msg  CirclePosition.msg  CollisionInfo.msg  DetectedObject.msg  PipettingSceneState.msg  PipettingTaskStatus.msg  TubeVisualState.msg
src/pipettingrobot_interfaces/srv/: GetCircleCoords.srv  GetDetections.srv  GetExpectedCircleCount.srv  SetActiveTube.srv  SetCircleCount.srv  SetJointAngles.srv  SetTargetPose.srv  SetTubeVisualState.srv  StartPipetting.srv
src/pipettingrobot_launch/: package.xml  setup.cfg  setup.py
src/pipettingrobot_launch/config/: eyeinhand_transform.yaml  eyetohand_transform.yaml
src/pipettingrobot_launch/launch/: pipettingrobot_launch.launch.py  pipettingrobot_sim.launch.py
src/pipettingrobot_sim/: CMakeLists.txt  package.xml
src/pipettingrobot_sim/config/: initial_positions.yaml  ros2_controllers.yaml
src/pipettingrobot_sim/launch/: multi_sim.launch.py  robot_gazebo.launch.py
src/pipettingrobot_sim/meshes/thirdparts/: pipettor_link.STL
src/pipettingrobot_sim/models/table/: model.config  model.sdf
src/pipettingrobot_sim/urdf/: C5.urdf.xacro  model.urdf  pipetting.ros2_control.xacro  pipetting_robot.urdf  pipetting_robot.urdf.sdf  pipettingrobot.urdf.xacro  pipettingrobot_C5.urdf.xacro
src/pipettingrobot_sim/worlds/: pipetting.world  pipetting_world  pipettingworld
src/rl_train/: package.xml  setup.cfg  setup.py
src/rl_train/rl_train/: contact_sensor.py  ee_pose_publisher.py  obstacle_feature_extractor.py  play.py  pointcloud.py  ros2_pipetbot_env.py  target_pose.py  train.py
src/target_detection/: package.xml  setup.py
src/target_detection/yolo11_custom/: __init__.py  dynamic_conv.py
src/target_detection/yolo11_custom/cfg/models/11/: yolo11n-C3k2_DynamicConv.yaml  yolo11n-CBFuse+C3k2_DynamicConv.yaml  yolo11n-HSFPN+CBfuse.yaml  yolo11n-HSFPN+DynamicConv.yaml  yolo11n-HSFPN2.yaml
src/target_detection/yolov11/: d435i_pointcloud.py  fig11.py  fig7.py  stereo_imagepub.py  yolov11_d435i.py  yolov11_stereo.py
