<?xml version="1.0"?>
<package format="3">
  <name>target_detection</name>
  <version>0.0.0</version>
  <description>target_detection</description>

  <maintainer email="robot@todo.todo">robot</maintainer>

  <license>MIT</license>

  <!-- 运行时依赖 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python 依赖 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>

